@@ -4,6 +4,8 @@ OpenDNSSEC 1.3.15rc1
 
 * SUPPORT-58: Extend ods-signer sign <zone> with --serial <nr> so that the user
   can specify the SOA serial to use in the signed zone [OPENDNSSEC-423].
+* OPENDNSSEC-397 - Change "hsmutil list" output so that the table header goes 
+  to stdout not stderr
 
 
 OpenDNSSEC 1.3.14 - 2013-05-16
